# SmartCopilot

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  README.md  compose.yaml  findings.md  main.py  progress.md  pyproject.toml  task_plan.md
docker/: backend.Dockerfile
docs/sql/: create_table.sql
frontend/: .dockerignore  Dockerfile  nginx.conf  package.json
frontend/src/theme/: settings.ts
frontend/src/typings/: api.d.ts  app.d.ts  elegant-router.d.ts
src/app/: __init__.py  init_database.py  main.py
src/app/agents/: agent_service.py  langgraph_agent.py  prompts.py  schemas.py  tool_executor.py  tool_registry.py
src/app/api/: dependencies.py  responses.py  router.py
src/app/chat/: __init__.py  generation_state.py  message_protocol.py  websocket_handler.py
src/app/core/: config.py  database.py  security.py
src/app/integrations/: kafka_client.py  llm_client.py  minio_storage.py
src/app/memory/: __init__.py  indexer.py  service.py
src/app/models/: billing.py  conversation.py  document_vector.py  file_upload.py  memory.py  organization_tag.py  user.py
src/app/rag/: __init__.py  chunker.py  embeddings.py  indexer.py  pipeline.py  references.py  retriever.py  schemas.py
src/app/repositories/: __init__.py  billing_repository.py  conversation_repository.py  document_vector_repository.py  file_upload_repository.py  memory_repository.py  organization_tag_repository.py  user_repository.py
src/app/schemas/: auth.py  organization.py
src/app/services/: auth_service.py  billing_service.py  (+8 more)
tests/: __init__.py  test_health.py
(+41 files in other folders)
