[project]
name = "smartcopilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "asyncmy>=0.2.9",
  "redis>=5.0.0",
  "elasticsearch>=8.14.0,<9.0.0",
  "aiohttp>=3.9.0",
  "httpx>=0.27.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.0",
  "minio>=7.2.0",
  "aiokafka>=0.10.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "bcrypt>=4.0.1",
  "PyJWT>=2.9.0",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
cache_dir = ".cache/pytest"
